--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,11 @@
  */
 
 plugins {
-  // Apply the java plugin to add support for Java
   id 'java'
-
-  // Apply the application plugin to add support for building a CLI application.
   id 'application'
-
   id 'com.diffplug.gradle.spotless' version '3.25.0'
+  id "org.sonarqube" version "3.0"
+
 }
 
 repositories {
@@ -59,4 +57,12 @@ spotless {
   }
   // Below this line are currently only license header tasks
   format 'groovy', { target '**/src/*/grovy/**/*.groovy' }
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "matkt_eth-launcher"
+    property "sonar.organization", "matkt"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
